[gd_scene load_steps=3 format=3 uid="uid://mo6n5ha27xnl"]

[ext_resource type="Script" path="res://main.gd" id="1_7mlky"]

[sub_resource type="Theme" id="Theme_7wrul"]
default_font_size = 24

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mlky")

[node name="CurveLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 500, 600, 250)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 176.0
grow_horizontal = 2
theme = SubResource("Theme_7wrul")

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "sample"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
allow_reselect = true
auto_height = true
item_count = 2
item_0/text = "sample"
item_1/text = "sample_baked"

[node name="BakeResolution" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = 2.0
value = 10.0
prefix = "bake resolution: "

[node name="SamplePoints" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
min_value = 2.0
value = 100.0
prefix = "sample points:"

[node name="CurveList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
allow_reselect = true
auto_height = true
item_count = 3
item_0/text = "x ^ 2"
item_1/text = "sawtooth 1"
item_2/text = "sawtooth 2"

[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="value_changed" from="VBoxContainer/BakeResolution" to="." method="_on_bake_resolution_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SamplePoints" to="." method="_on_sample_points_value_changed"]
[connection signal="item_selected" from="VBoxContainer/CurveList" to="." method="_on_curve_list_item_selected"]
